added new stuff

--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -17,19 +17,10 @@
 
 <script>
 
-var plus = function() {
-var sum = 0;
-  for (var i = arguments.length - 1; i >= 0; i--) {
-    sum += arguments[i];
-  }
-  return sum;
-}
+var name="Andrew";
+console.log("Hi, my name is " + name);
 
-console.log(plus(2, 2));
-console.log(plus(2, 2, 2));
-console.log(plus(2, 2, 3));
-
-
+console.log(`Hi, my name is ${name}`);
 
 </script>
 </html>
