--- a/pages/basics/strings.html
+++ b/pages/basics/strings.html
@@ -261,6 +261,34 @@ Dolly!";</pre>
 
 
 
+
+
+    <section class="container">
+        <h1>Template Strings</h1>
+
+        <div class="row">
+            <div class="col-6">
+              <p>String templates are a different option to concatentation. They make your code easier to write and read.</p>
+                <p>Use the ` character to enclose a template string.</p>
+                <p>The variable string is written as: ${varName}</p>
+                <p>This takes the place of string concatenation using the + character.</p>
+                <p>This shows the difference in the two methods.</p>
+
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var name="Andrew";
+<span class="code-comment">concatenation</span>
+console.log("Hi, my name is " + name);
+<span class="code-comment">String template</span>
+console.log(`Hi, my name is ${name}`);</pre>
+            </div>
+        </div>
+
+
+
+
+
     <script src="../../_js/jquery.js"></script>
     <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
