--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -17,10 +17,11 @@
 
 <script>
 
-var name="Andrew";
-console.log("Hi, my name is " + name);
-
-console.log(`Hi, my name is ${name}`);
+var d = new Date(100000000000);
+console.log(d);
+console.log(d.toString())
+console.log(d.toUTCString())
+console.log(d.toDateString())
 
 </script>
 </html>
