--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
         <h1>Table of Contents</h1>
 
 
-        <h2>Basics</h2>
+
+        <h1>References</h1>
+        <h2>Links and References</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/links.html">Links and references</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+        <h2>Test page</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="examples/test-page.html">Test Page</a>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+        <h1>Basics</h1>
         <nav>
             <ul class="main-nav">
 
@@ -27,12 +51,8 @@
                     <li><a href="pages/basics/console.html">The browser console</a></li>
                     <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
-                    <li><a href="pages/basics/numbers.html">Numbers</a></li>
-                    <li><a href="pages/basics/number-methods.html">Number methods</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/scope.html">Scope</a></li>
-                    <li><a href="pages/basics/strings.html">Strings</a></li>
-                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
                     <li><a href="pages/basics/this.html">this</a></li>
                     <li><a href="pages/basics/typeof.html">typeof</a></li>
                     <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
@@ -42,6 +62,28 @@
             </ul>
         </nav>
 
+        <h2>Dates</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/dates.html">Dates</a></li>
+                    <li><a href="pages/basics/dates-formats.html">Date Formats</a></li>
+
+                </ul>
+            </ul>
+        </nav>
+
+        <h2>Numbers</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/basics/numbers.html">Numbers</a></li>
+                  <li><a href="pages/basics/number-methods.html">Number methods</a></li>
+                </ul>
+            </ul>
+        </nav>
 
 
         <h2>Script examples</h2>
@@ -55,9 +97,22 @@
             </ul>
         </nav>
 
+        <h2>Strings</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/strings.html">Strings</a></li>
+                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
+
+                </ul>
+            </ul>
+        </nav>
 
 
-        <h2>Interacting with page content</h2>
+
+
+        <h1>Interacting with page content</h1>
         <nav>
             <ul class="main-nav">
 
@@ -70,7 +125,7 @@
 
                     <li>
 
-                    <h5>Events</h5></li>
+                        <h5>Events</h5></li>
                     <li><a href="pages/events/events.html">Events</a></li>
                     <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                     <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
@@ -81,6 +136,7 @@
         </nav>
 
 
+        <h1>Arrays, Functions, and Objects</h1>
         <h2>Arrays</h2>
         <nav>
             <ul class="main-nav">
@@ -139,27 +195,9 @@
         </nav>
 
 
-        <h2>Common Code examples</h2>
-        <nav>
-            <ul class="main-nav">
-
-                <ul class="sub-nav">
-                    <li><a class="red" href="examples/code-examples.html">Common code examples</a>
-                        <li><a href="examples/test-page.html">Test Page</a>
-                </ul>
-            </ul>
-        </nav>
 
 
-        <h2>Links and References</h2>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/links.html">Links and references</a></li>
-                </ul>
-            </ul>
-        </nav>
 
 
 
