--- a/pages/objects/objects.html
+++ b/pages/objects/objects.html
@@ -127,65 +127,308 @@ course["Where it is"] = "At the school";</span></pre>
             </div>
         </div>
 
+
+        <h3>Full example how ot create and retrieve Object data</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>This creates an Object named myBook with data.</p>
+                <p>The data is retrieved using a string template and dot notation.</p>
+                <p>The value of 'title' is then changed manually. When checked, the new value displays.</p>
+                <p>This outputs:</p>
+                <ul>
+                    <li>1984 by George Orwell</li>
+                    <li>Animal Farm by George Orwell</li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let myBook = {
+  title: '1984',
+  author: 'George Orwell',
+  pageCount: 326
+}
+
+console.log(`${myBook.title} by ${myBook.author}`)
+
+myBook.title = 'Animal Farm'
+
+console.log(`${myBook.title} by ${myBook.author}`)</span></pre>
+            </div>
+        </div>
+
+
+
+
+
+        <h3>Returning 2 Objects using a function</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>Instead of writing several console.log statements, you can create a function to gather the data.</p>
+                <p>This returns:</p>
+                <ul>
+                    <li>1984 by George Orwell</li>
+                    <li>A Peoples History by Howard Zinn</li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let myBook = {
+  title: '1984',
+  author: 'George Orwell',
+  pageCount: 326
+}
+
+let otherBook = {
+  title: 'A Peoples History',
+  author: 'Howard Zinn',
+  pageCount: 723
+}
+
+let getSummary = function (book) {
+  console.log(`${book.title} by ${book.author}`)
+}
+
+getSummary(myBook)
+getSummary(otherBook)</span></pre>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <h3>Create and return 2 new properties using a function</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>This creates two new propties within the function.</p>
+                <ul>
+                    <li>summary</li>
+                    <li>pageCountSummary</li>
+                </ul>
+
+                <p>This returns:</p>
+                <ul>
+                    <li>1984 by George Orwell</li>
+                    <li>1984 is 326 pages long</li>
+                    <li>A Peoples History is 723 pages long</li>
+                    <li>A Peoples History by Howard Zinn</li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let myBook = {
+  title: '1984',
+  author: 'George Orwell',
+  pageCount: 326
+}
+
+let otherBook = {
+  title: 'A Peoples History',
+  author: 'Howard Zinn',
+  pageCount: 723
+}
+
+let getSummary = function (book) {
+    return {
+      <span class="code-comment">//return different summaries by creating different properties
+      //set the new summary property to a template string</span>
+      summary: `${book.title} by ${book.author}`,
+      <span class="code-comment">//create new pageCountSummary property</span>
+      pageCountSummary: `${book.title} is ${book.pageCount} pages long`
+    }
+}
+
+<span class="code-comment">//bookSummary is an Object because it returns Object data from the function</span>
+let bookSummary = getSummary(myBook)
+let otherBookSummary = getSummary(otherBook)
+
+console.log(bookSummary.summary)
+console.log(bookSummary.pageCountSummary)
+
+console.log(otherBookSummary.summary)
+console.log(otherBookSummary.pageCountSummary)</span></pre>
+            </div>
+        </div>
+
+
+
+        <section class="container">
+            <h1>Change a property in an Object</h1>
+            <h3>This changes a single property (by reference)</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>Sending an Object to a function's parameter creates a reference to the Object.</p>
+                    <p>Any change to the reference makes a change to the actual Object.</p>
+                    <p>This outputs twice:</p>
+                    <ul>
+                      <li>{ name: 'Andrew Mead', expenses: 2.5, income: 0 }</li>
+                      <li>{ name: 'Andrew Mead', expenses: 2.5, income: 0 }</li>
+                    </ul>
+                    <p>This shows the new value within the function also permanenty changed the actual Object.</p>
+                </div>
+                <div class="col-6">
+                    <pre class="example"><span class="code-js">let myAccount = {
+  name: 'Andrew Mead',
+  expenses: 0,
+  income: 0
+}
+
+<span class="code-comment">//The account param is passing a reference to the myAccount Object in memory</span>
+let addExpense = function (account, amount) {
+  <span class="code-comment">//change expenses property</span>
+  account.expenses = account.expenses + amount
+  <span class="code-comment">//Print value of Object within this function</span>
+  console.log(account)
+}
+
+<span class="code-comment">//Send the myAccount Object into the function as the first param
+//Send 2.50 to the 2nd param</span>
+addExpense(myAccount, 2.50)
+<span class="code-comment">//Check the Object now and see the expenses property has changed</span>
+console.log(myAccount)</span></pre>
+                </div>
+            </div>
+
+        </section>
+
+
+
+
+
+
+        <section class="container">
+            <h3>This does not change the Object since it breaks the reference</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>You can only change properties of the Object within the function.</p>
+                    <p>If you assign the Object to a new Object, it DOES NOT change the original Object because the reference is then broken.</p>
+                    <p>This outputs</p>
+                    <ul>
+                      <li>{}</li>
+                      <li>{ name: 'Andrew Mead', expenses: 2.5, income: 0 }</li>
+                    </ul>
+                    <p>Using the assignment operator on the param name creates a new local Object. It breaks the reference to the actual Object.</p>
+                </div>
+                <div class="col-6">
+                  <pre class="example"><span class="code-js">let myAccount = {
+  name: 'Andrew Mead',
+  expenses: 0,
+  income: 0
+}
+
+let addExpense = function (account, amount) {
+  <span class="code-comment">//set account (the reference) to an empty Object</span>
+  account = {}
+  <span class="code-comment">//Print value of Object within this function</span>
+  console.log(account)
+}
+
+addExpense(myAccount, 2.50)
+console.log(myAccount)</span></pre>
+                </div>
+            </div>
+
+        </section>
+
+
+        <section class="container">
+            <h3>Changing the property by reference (without a function)</h3>
+            <div class="row">
+                <div class="col-6">
+                    <p>By assigning a variable to the Object, you create a reference to the Object.</p>
+                    <p>This outputs</p>
+                    <ul>
+                      <li>{ name: 'Andrew Mead', expenses: 2.5, income: 1000 }</li>
+                      <li>{ name: 'Andrew Mead', expenses: 2.5, income: 1000 }</li>
+                    </ul>
+
+                </div>
+                <div class="col-6">
+                  <pre class="example"><span class="code-js">let myAccount = {
+  name: 'Andrew Mead',
+  expenses: 0,
+  income: 0
+}
+
+<span class="code-comment">//Create a reference (binding) to the original Object</span>
+let otherAccount = myAccount
+<span class="code-comment">//Change a property of this reference</span>
+otherAccount.income = 1000
+
+let addExpense = function (account, amount) {
+  account.expenses = account.expenses + amount
+  console.log(account)
+}
+
+addExpense(myAccount, 2.50)
+console.log(myAccount)</span></pre>
+                </div>
+            </div>
+
+        </section>
+
+
     </section>
 
-<section class="container">
-  <h1>Deleting an Object or property</h1>
-    <h3>Deleting a property</h3>
-    <div class="row">
-        <div class="col-6">
-            <p>You can delete a property by running 'delete' following by the property value in dot notation.</p>
+    <section class="container">
+        <h1>Deleting an Object or property</h1>
+        <h3>Deleting a property</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>You can delete a property by running 'delete' following by the property value in dot notation.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">delete course.title;</span></pre>
+            </div>
         </div>
-        <div class="col-6">
-            <pre class="example"><span class="code-js">delete course.title;</span></pre>
-        </div>
-    </div>
 
 
-    <h3>Empty an Object</h3>
-    <div class="row">
-        <div class="col-6">
-            <p>You can empty an object by setting it to null.</p>
-            <p>If you now run 'person.firstName' it will return null.</p>
-        </div>
-        <div class="col-6">
-            <pre class="example"><span class="code-js">var person = { firstName:"John",
+        <h3>Empty an Object</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>You can empty an object by setting it to null.</p>
+                <p>If you now run 'person.firstName' it will return null.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var person = { firstName:"John",
   lastName:"Doe", age:50,
   eyeColor:"blue"
 };
 
 var person = null;</span></pre>
+            </div>
         </div>
-    </div>
 
 
-  </section>
+    </section>
 
 
 
-  <section class="container">
-    <h1>Object conversion</h1>
+    <section class="container">
+        <h1>Object conversion</h1>
 
-    <div class="row">
-        <div class="col-6">
-            <p>Avoid String, Number, and Boolean objects. They complicate your code and slow down execution speed.</p>
-        </div>
-        <div class="col-6">
-            <pre class="example"><span class="code-js">var x = new String(); <span class="code-comment">// Declares x as a String object</span>
+        <div class="row">
+            <div class="col-6">
+                <p>Avoid String, Number, and Boolean objects. They complicate your code and slow down execution speed.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var x = new String(); <span class="code-comment">// Declares x as a String object</span>
 var y = new Number(); <span class="code-comment">// Declares y as a Number object</span>
 var z = new Boolean(); <span class="code-comment">// Declares z as a Boolean object</span></span></pre>
+            </div>
         </div>
-    </div>
 
-      <div class="row">
-          <div class="col">
-              <p>Objects in JavaScript can be converted to primitives in three contexts:</p>
-              <ul><li>Numeric</li>
-<li>String</li>
-<li>Boolean</li></ul>
-<p><a href="http://javascript.info/tutorial/object-conversion">Object conversion</a></p>
-          </div>
-      </div>
+        <div class="row">
+            <div class="col">
+                <p>Objects in JavaScript can be converted to primitives in three contexts:</p>
+                <ul>
+                    <li>Numeric</li>
+                    <li>String</li>
+                    <li>Boolean</li>
+                </ul>
+                <p><a href="http://javascript.info/tutorial/object-conversion">Object conversion</a></p>
+            </div>
+        </div>
     </section>
 
 
@@ -198,14 +441,14 @@ var z = new Boolean(); <span class="code-comment">// Declares z as a Boolean obj
 
 
     <section class="container">
-      <h1>Iterating over Object key:value pairs</h1>
+        <h1>Iterating over Object key:value pairs</h1>
 
-      <div class="row">
-          <div class="col-6">
-              <p>You can loop through key:value pairs by using a for loop with the 'key' keyword.</p>
-          </div>
-          <div class="col-6">
-              <pre class="example"><span class="code-js">var menu = {
+        <div class="row">
+            <div class="col-6">
+                <p>You can loop through key:value pairs by using a for loop with the 'key' keyword.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var menu = {
   width:  300,
   height: 200,
   title: "Menu"
@@ -216,13 +459,13 @@ var val = menu[key];
 
 console.log("Key: " + key + " \nValue: " + val);
 }</span></pre>
-          </div>
-      </div>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col">
                 <p>The code above prints out the following:</p>
-<pre class="example">Key: width
+                <pre class="example">Key: width
 Value: 300
 
 Key: height
@@ -232,14 +475,7 @@ Key: title
 Value: Menu</pre>
             </div>
         </div>
-      </section>
-
-
-
-
-
-
-
+    </section>
 
 
 
