new array stuff

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                 <ul class="sub-nav">
                     <li><a href="pages/basics/dates.html">Dates</a></li>
                     <li><a href="pages/basics/dates-formats.html">Date Formats</a></li>
+                    <li><a href="pages/basics/retrieving-dates.html">Retrieving Dates</a></li>
+                    <li><a href="pages/basics/setting-dates.html">Setting Dates</a></li>
 
                 </ul>
             </ul>
