--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -17,11 +17,33 @@
 
 <script>
 
-var d = new Date(100000000000);
-console.log(d);
-console.log(d.toString())
-console.log(d.toUTCString())
-console.log(d.toDateString())
+const notes = [{
+    title: 'My next trip',
+    body: 'I would like to go to Spain'
+}, {
+    title: 'Habbits to work on',
+    body: 'Exercise. Eating a bit better.'
+}, {
+    title: 'Office modification',
+    body: 'Get a new seat'
+}]
+
+
+/*
+function myFunction(someproperty) {
+    return someproperty.title === 'Habbits to work on'
+}
+let indexValue = notes.findIndex(myFunction)
+console.log(indexValue)
+*/
+//console.log(notes.findIndex(myFunction))
+
+
+const index = notes.findIndex(function (param) {
+    return param.title === 'Habbits to work on'
+})
+console.log(index)
+
 
 </script>
 </html>
