--- a/pages/basics/number-methods.html
+++ b/pages/basics/number-methods.html
@@ -100,6 +100,121 @@ x.toPrecision(6); </span></pre>
         </div>
 
 
+<h1>Math methods</h1>
+        <h2>round()</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>round() rounds off the value.</p>
+                <p>This returns:
+                    <ul>
+                        <li>104</li>
+
+                    </ul>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let num = 103.941
+console.log(Math.round(num))</span></pre>
+            </div>
+        </div>
+
+        <h2>ceil()</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>ceil() is ceiling method. It rounds UP to the nearest integer.</p>
+
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let num = 103.8
+console.log(Math.floor(num))</span></pre>
+            </div>
+        </div>
+
+
+        <h2>floor()</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>rounds down to the nearest integer.</p>
+                <p>So even though the decimal is .2, this roudns UP to 104.</p>
+
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let num = 103.2
+console.log(Math.ceil(num))</span></pre>
+            </div>
+        </div>
+
+
+<h1>random()</h1>
+                <div class="row">
+                    <div class="col-6">
+                        <p>This generates a value between 0 and 1, which you can then scale to your desired range.</p>
+                        <p>This returns a number such as: 0.08616273575050071</p>
+
+                    </div>
+
+                    <div class="col-6">
+                        <pre class="example"><span class="code-js">let randomNum = Math.random()
+console.log(randomNum)</span></pre>
+                    </div>
+                </div>
+
+                <h2>Generate random number between two values</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>This generates a value between 10 and 20.</p>
+                        <p>You need to use a simple formula of (max - min +1) to ge a base over the min value.</p>
+                        <p>You can then use Math.floor() to round down to the nearest integer to set the base value.</p>
+
+                    </div>
+
+                    <div class="col-6">
+                        <pre class="example"><span class="code-js">let min = 10
+let max = 20
+<span class="code-comment">//random() creates a value between 0 and 1
+//To get whole numbers between 10 and 20 use this formula: * (max-min)
+//The max is now 9.99999 because .9999 * 10. But you only want values from 10 - 20
+//So, add +1 to make the base value over 10, now the base value can be 10.999
+//Finally, use Math.floor to round down to the nearest integer. This makes the random base value 10</span>
+let randomNum = Math.floor(Math.random() * (max - min + 1)) + min
+console.log(randomNum)</span></pre>
+                    </div>
+                </div>
+
+
+
+                <h2>Create random function that takes a param, then checks if it equals the random number</h2>
+                <div class="row">
+                    <div class="col-6">
+                        <p>This returns true if your guess is equal to the random value. Othwise false.</p>
+
+                    </div>
+
+                    <div class="col-6">
+                        <pre class="example"><span class="code-js">let min = 10
+  let max = 20
+  let makeGuess = function (guess) {
+  let min = 1
+  let max = 5
+  let randomNum = Math.floor(Math.random() * (max - min + 1)) + min
+
+    return guess === randomNum
+}
+
+console.log(makeGuess(1))</span></pre>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
 
 
         <h1>Converting Variables to Numbers</h1>
