--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             </ul>
         </nav>
 
-        <h2>Numbers</h2>
+        <h2>Math and Numbers</h2>
         <nav>
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/numbers.html">Numbers</a></li>
-                  <li><a href="pages/basics/number-methods.html">Number methods</a></li>
+                    <li><a href="pages/basics/numbers.html">Numbers</a></li>
+                    <li><a href="pages/basics/number-methods.html">Number methods</a></li>
                 </ul>
             </ul>
         </nav>
@@ -146,16 +146,65 @@
                 <ul class="sub-nav">
                     <li>
                         <h5>Basics</h5></li>
-                    <li><a href="pages/arrays/arrays.html">Arrays</a></li>
-                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a></li>
+                    <li><a href="pages/arrays/arrays.html">Arrays</a>
+                        <ul>
+                            <li>ARRAY.lenth</li>
+                            <li>forEach()</li>
+                            <li>isArray()</li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a>
+                        <ul>
+                            <li>forEach()</li>
+                            <li>map()</li>
+                            <li>filter()</li>
+                            <li>reduce()</li>
+                            <li>every()</li>
+                            <li>some()</li>
+                            <li>indexOf()</li>
+                            <li>lastIndexOf()</li>
+                            <li>find()</li>
+                            <li>findIndex()</li>
+                        </ul>
+                    </li>
                     <li>
                         <h5>Methods</h5></li>
-                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a></li>
-                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a></li>
-                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a></li>
+                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a>
+                        <ul>
+                            <li>splice()</li>
+                            <li>pop()</li>
+                            <li>shift()</li>
+                            <li>push()</li>
+                            <li>length</li>
+                            <li>unshift()</li>
+                            <li>slice()</li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a>
+                      <ul>
+                          <li>indexOf()</li>
+                          <li>findIndexOf()</li>
+<li>find()</li>
+
+                        </ul></li>
+                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a>
+                      <ul>
+                          <li>join()</li>
+                          <li>toString()</li>
+                          <li>split()</li>
+
+
+                        </ul></li>
                     <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
-                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a></li>
-                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a></li>
+                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a>
+                      <ul>
+                          <li>sort()</li>
+                          <li>Math.max()</li>
+                            <li>Math.min()</li>
+
+                        </ul></li>
+                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a>  <ul>
+                          <li>reverse()</li></ul></li>
                 </ul>
             </ul>
         </nav>
