--- a/pages/arrays/sorting-arrays.html
+++ b/pages/arrays/sorting-arrays.html
@@ -274,12 +274,13 @@ function myArrayMin(arr) {
         <div class="row">
             <div class="col-6">
                 <p>Even if objects have properties of different data types, the sort() method can be used to sort the array.</p>
-<p>The solution is to write a compare function to compare the property values</p>
-<p>This sorts the car objects by year. This prints:</p>
-<ul>
-  <li>Saab 2001</li>
-<li>BMW 2010</li>
-<li>Volvo 2016</li></ul>
+                <p>The solution is to write a compare function to compare the property values</p>
+                <p>This sorts the car objects by year. This prints:</p>
+                <ul>
+                    <li>Saab 2001</li>
+                    <li>BMW 2010</li>
+                    <li>Volvo 2016</li>
+                </ul>
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js">var cars = [
@@ -304,6 +305,16 @@ function displayCars() {
         </div>
 
     </section>
+
+
+
+
+
+
+
+
+
+
     <script src="../../_js/jquery.js"></script>
     <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
