--- a/pages/basics/retrieving-dates.html
+++ b/pages/basics/retrieving-dates.html
@@ -190,6 +190,30 @@ console.log(<span class="standout">d.getMilliseconds()</span>);</span></pre>
             </div>
         </div>
 
+        <h4>Using the Number() method to display Milliseconds since 1/1/1970</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>The Number() method converts a date to a number.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">let x = new Date("2017-09-30");
+let index = Number(x);
+console.log(index)</span></pre>
+            </div>
+        </div>
+
+        <h5>Output</h5>
+        <div class="row">
+            <div class="col-6">
+
+                <p class="code-output">This example outputs:</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-output">1506729600000</span></pre>
+            </div>
+        </div>
 
         <h4>Show Day of week</h4>
         <div class="row">
